styles.css
:root {
  /* Colors */
  --white: hsl(0, 0%, 100%);
  --Stone-100: hsl(30, 54%, 90%);
  --Stone-150: hsl(30, 18%, 87%);
  --Stone-600: hsl(30, 10%, 34%);
  --Stone-900: hsl(24, 5%, 18%);
  --Brown-800: hsl(14, 45%, 36%);
  --Rose-800: hsl(332, 51%, 32%);
  --Rose-50: hsl(330, 100%, 98%);

  /* Typography */
}

body {
  background-color: var(--Stone-100);
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: "Outfit", sans-serif;
  font-size: 16px;
  min-height: 100vh;
}

.card {
  background-color: var(--white);
  color: var(--Stone-600);
  border-radius: 15px;
  max-width: 700px;
  text-align: center;
  margin: 50px auto;
  padding: 30px;
}

img {
  max-width: 700px;
  border-radius: 10px;
}

.recipe h1 {
  color: var(--Stone-900);
  font-family: "Young Serif", serif;
  font-weight: 100;
}
.bold {
  color: var(--Stone-600);
  font-weight: bold;
}
.bolder {
  color: var(--Rose-800);
  font-weight: 600;
}
.recipe {
  text-align: start;
}

.preparation-time {
  text-align: start;
  background-color: var(--Rose-50);
  padding: 10px;
  border-radius: 10px;
}

.preparation-time h4 {
  padding-left: 20px;
  color: var(--Rose-800);
}
/* .preparation-time li {
  padding-bottom: 10px;
} */
.ingredients ul, .instructions ol {
  margin-left: 0px;
  padding-left: 20px;
}
.ingredients {
  text-align: start;
  border-bottom: 1px solid var(--Stone-150);
}

.title {
  font-family: "Young Serif", serif;
  font-weight: 100;
  font-size: 24px;
}

.title,
ol {
  color: var(--Brown-800);
  padding-bottom: 5px;
}

.instructions {
  text-align: start;
  border-bottom: 1px solid var(--Stone-150);
}

li{
  padding: 0 10px 10px 10px;
}

.nutrition {
  text-align: start;
}
span {
  color: var(--Stone-600);
}

table {
  border-collapse: collapse;
  width: 100%;
}
th,
td {
  text-align: left;
  padding: 10px 30px;
  border-bottom: 1px solid var(--Stone-150);
  font-weight: 400;
}
.last {
  border-bottom: none;
}

@media screen and (max-width: 800px) {
  .card {
    margin: 0px;
    padding: 20px;
    border-radius: 0px;
  }
  body {
    margin: 0px;
    padding: 0px;
  }
  img {
    width: 100%;
    height: auto;
    display: block;
    border-radius: 0px;
  }
}

